--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "lite": "lite-server",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +26,27 @@
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "6.0.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "@angular-devkit/build-angular": "0.6.8",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.3",
+    "@angular/language-service": "6.0.3",
+    "@types/jasmine": "2.8.6",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "8.9.4",
+    "codelyzer": "4.2.1",
+    "jasmine-core": "2.99.1",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage-istanbul-reporter": "2.0.0",
+    "karma-jasmine": "1.1.1",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "protractor": "5.3.0",
+    "ts-node": "5.0.1",
+    "tslint": "5.9.1",
+    "typescript": "2.7.2",
+    "webpack": "^4.44.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.8",
@@ -47,5 +69,9 @@
     "tslint": "5.9.1",
     "typescript": "2.7.2",
     "webpack": "^4.44.1"
+  },
+  "engines": {
+    "node": "10.14.2",
+      "npm": "6.4.1"
   }
 }
