--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "lite": "lite-server",
-    "postinstall": "ng build --prod"
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -71,7 +71,7 @@
     "webpack": "^4.44.1"
   },
   "engines": {
-    "node": "10.14.2",
-      "npm": "6.4.1"
+    "node": "12.16.3",
+    "npm": "6.14.4"
   }
 }
